# family-glucose-monitor

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  DISCLAIMER.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  validate_connection.py  validate_telegram.py
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PRIVACY.md
migrations/: README  env.py
migrations/versions/: 0001_baseline_alert_history_schema.py
pulls/: 1.json
src/: alert_engine.py  alert_history.py  api.py  api_server.py  auth.py  bootstrap.py  cache_path.py  config_schema.py  connection_tester.py  crypto.py  db.py  glucose_reader.py  main.py  paths.py  push_subscriptions.py  reading_history.py  setup_status.py  state.py
src/dashboard/: configuracion.html  index.html  login.html  manifest.json  setup.html  sw.js
src/models/: __init__.py  db_models.py
src/outputs/: __init__.py  base.py  multi_notifier.py  telegram.py  webhook.py  webpush.py  whatsapp.py
tests/: conftest.py  test_alembic_migrations.py  test_alert_engine.py  test_alert_history.py  test_api.py  test_api_server.py  test_auth.py  test_cache_path.py  test_config_schema.py  test_connection_tester.py  test_crypto.py  test_db_models.py  test_glucose_reader.py  test_i18n_pages.py  test_main_startup.py  test_multi_notifier.py  test_paths.py  test_push_notifications.py  test_reading_history.py  test_run_once.py  test_setup_status.py  test_startup.py  test_state.py  test_telegram_output.py  test_trend_alerts.py
(+3 files in other folders)
